--- a/index.html
+++ b/index.html
@@ -25,21 +25,41 @@
         <div class="col d-none d-lg-block">
             <img src="styles/images/Volleyball.png" class="img-fluid" />
         </div>
-    <div class="col"> 
-      <div class="project-description">
-        <h2 class="mb-5">Volleyball Project</h2>
-        <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-        <a href="" class="btn btn-branding-outline">Learn more</a>
-            
+        <div class="col"> 
+           <div class="project-description">
+            <h2 class="mb-5">Volleyball Project</h2>
+              <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+               <a href="" class="btn btn-branding-outline">Learn more</a>
+            </div>
         </div>
     </div>
     </div>
+    <div class="row">
+        <div class="col"> 
+            <div class="project-description">
+               <h2 class="mb-5">Weather Project</h2>
+               <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+               <a href="" class="btn btn-branding-outline">Learn more</a>
+           </div>
+        </div>
+        <div class="col d-none d-lg-block">
+            <img src="styles/images/weather-app.png" class="img-fluid" />
+        </div>
+   </div>
 
+    <div class="row">
+      <div class="col d-none d-lg-block">
+        <img src="styles/images/world-clock.png" class="img-fluid" />
+      </div>
+
+      <div class="col"> 
+       <div class="project-description">
+        <h2 class="mb-5">World-Clock Project</h2>
+          <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
+           <a href="" class="btn btn-branding-outline">Learn more</a>
+        </div>
     </div>
- 
-<h2 class="mb-5">Volleyball Project</h2>
-<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-<a href="" class="btn btn-branding-outline">Learn more</a>
-</div> 
+
+ </div> 
 </body>
 </html>
