Added the navigation links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
       
  <h1 >Cristina Mihalachi</h1> 
  <h2 class="mb-5"> Frontend developer, based in Germany</h2>
-<a href="" class="btn btn-branding">Get started</a>  
+ <div class="navigation-links mb-5 text-center ">
+    <a class=" btn btn-branding p-3" href="/about#contact" title="Contact Cristina Mihalachi">
+     Contact me</a>
+    <a class="btn btn-branding-outline p-3" href="/about" title="About Cristina Mihalachi">
+     About me</a>
+  </div>
 </div>
 <p class="text-center m-5 ">Featured Project which my best projects be choice to show</p>
 
