added the achor-links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <a class="nav-link active" href="/about" title="About Cristina Mihalachi">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about#contact" title="Contact Cristina Mihalachi">Contact me</a>
+                <a class="nav-link active" href="/work" title="Work">Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact" title="Contact Cristina Mihalachi">Contact me</a>
               </li>
             </ul>
           </div>
