--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,27 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-
+    <nav class="navbar navbar-expand-lg bg-light fixed-top">
+        <div class="container">
+          <a class="navbar-brand" href="/" title="Homepage">Cristina Mihalachi</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/about" title="About Cristina Mihalachi">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about#contact" title="Contact Cristina Mihalachi">Contact me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 <div class="content-container container">
     <div class="content">
       <h1>Let`s get in touch!</h1>
