--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,13 @@
                 <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about" title="About Cristina Mihalachi">About me</a>
+                <a class="nav-link active" href="/about.html" title="About Cristina Mihalachi">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about#contact" title="Contact Cristina Mihalachi">Contact me</a>
+                <a class="nav-link active" href="/work.html" title="About Cristina Mihalachi">Work </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
               </li>
             </ul>
           </div>
