--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/about" title="About Cristina Mihalachi">About me</a>
+                <a class="nav-link active" href="/about.html" title="About Cristina Mihalachi">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/work" title="Work">Work</a>
+                <a class="nav-link active" href="/work.html" title="Work">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact" title="Contact Cristina Mihalachi">Contact me</a>
+                <a class="nav-link" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
               </li>
             </ul>
           </div>
@@ -42,9 +42,9 @@
  <h1 >Cristina Mihalachi</h1> 
  <h2 class="mb-5"> Frontend developer, based in Germany</h2>
  <div class="navigation-links mb-5 text-center ">
-    <a class=" btn btn-branding p-3" href="/about#contact" title="Contact Cristina Mihalachi">
+    <a class=" btn btn-branding p-3" href="/contact.html" title="Contact Cristina Mihalachi">
      Contact me</a>
-    <a class="btn btn-branding-outline p-3" href="/about" title="About Cristina Mihalachi">
+    <a class="btn btn-branding-outline p-3" href="/about.html" title="About Cristina Mihalachi">
      About me</a>
   </div>
 </div>
