adjusted de anchor links

--- a/about.html
+++ b/about.html
@@ -25,7 +25,10 @@
                 <a class="nav-link active" href="/about.html" title="About Cristina Mihalachi">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/about#contact" title="Contact Cristina Mihalachi">Contact me</a>
+                <a class="nav-link active" href="/work.html" title="About Cristina Mihalachi">Work
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
               </li>
             </ul>
           </div>
