--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                 <a class="nav-link active" href="/work.html" title="About Cristina Mihalachi">Work </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
+                <a class="nav-link active" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
               </li>
             </ul>
           </div>
