changed the navbar and added a new logo

--- a/about.html
+++ b/about.html
@@ -10,30 +10,25 @@
         <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="/" title="Homepage">Cristina Mihalachi</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/about.html" title="About Cristina Mihalachi">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/work.html" title="About Cristina Mihalachi">Work
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav> 
+  <div class="container">
+    <nav class="d-flex justify-content-between ">
+         <img src="styles/images/logo.png" alt="logo" class="logo img-fluid" >
+    <ul>
+        <li >
+            <a href="/">Home</a>
+        </li >
+<li class="active">
+            <a href="/about.html">About</a>
+        </li>
+            <li>
+                <a href="/work.html">Work</a>
+            </li>
+            <li>
+                <a href="/contact.html">Contact</a>
+            </li> 
+         </ul> 
+    </nav>
+         </div>
       <div class="content-container">
               <h1 class="mb-4 mt-5 text-center" >Cristina Mihalachi</h1> 
               <h2 class="mb-5 text-center" > Frontend developer, based in Germany</h2>
