--- a/work.html
+++ b/work.html
@@ -10,53 +10,48 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="/" title="Homepage">Cristina Mihalachi</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/about.html" title="About Cristina Mihalachi">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/work.html" title="About Cristina Mihalachi">Work</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/contact.html" title="Contact Cristina Mihalachi">Contact me</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="container">
+        <nav class="d-flex justify-content-between ">
+             <img src="styles/images/logo.png" alt="logo" class="logo img-fluid" >
+        <ul>
+            <li >
+                <a href="/">Home</a>
+            </li>
+            <li>
+                <a href="/about.html">About</a>
+            </li>
+                <li class="active">
+                    <a href="/work.html">Work</a>
+                </li>
+                <li >
+                    <a href="/contact.html">Contact</a>
+                </li> 
+             </ul> 
+        </nav>
+             </div>
       <div class="content-container container">
         <div class="content">
           <h1 class=" mb-5">Take a look at what I've been working on!</h1>
              <div class="row">
                <div class="col-md-6 mb-4">
                   <img src="styles/images/weather-app.png" alt="" class="img-fluid mb-3 rounded">
-                        <h3 class="text-center m-0">Weather-app Project  </h3>  
+                        <h3 class="text-center m-0">Weather app</h3>  
                         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
                     <img src="styles/images/Volleyball.png" alt="" class="img-fluid mb-3 rounded">
-                <h3 class="text-center m-0">Hobby Project</h3>  
+                <h3 class="text-center m-0">Volleyball</h3>  
                 <p class="text-center text-muted">Built with HTML and CSS</p>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
                        <img src="styles/images/deutsche-lyric.png" alt="" class="img-fluid mb-3 rounded">
-                             <h3 class="text-center m-0">Deutsche-lyric Project  </h3>  
+                             <h3 class="text-center m-0">Deutsche-lyric app  </h3>  
                              <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                      </div>
                      <div class="col-md-6 mb-4">
                          <img src="styles/images/world-clock.png" alt="" class="img-fluid mb-3 rounded">
-                     <h3 class="text-center m-0">World-Clock Project</h3>  
+                     <h3 class="text-center m-0">World-Clock app</h3>  
                      <p class="text-center text-muted">Built with HTML and CSS</p>
                      </div>
              </div>
