removed the margin top of the h1

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </nav>
          </div>
       <div class="content-container">
-              <h1 class="mb-4 mt-5 text-center" >Cristina Mihalachi</h1> 
+              <h1 class="mb-2 text-center p-0" >Cristina Mihalachi</h1> 
               <h2 class="mb-5 text-center" > Frontend developer, based in Germany</h2>
     
      <div class="container">
