--- a/work.html
+++ b/work.html
@@ -35,23 +35,23 @@
              <div class="row">
                <div class="col-md-6 mb-4">
                   <img src="styles/images/weather-app.png" alt="" class="img-fluid mb-3 rounded">
-                        <h3 class="text-center m-0">Weather app</h3>  
+                        <h3 class="text-center m-0">Weather App</h3>  
                         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
                     <img src="styles/images/Volleyball.png" alt="" class="img-fluid mb-3 rounded">
-                <h3 class="text-center m-0">Volleyball</h3>  
+                <h3 class="text-center m-0">Volleyball App</h3>  
                 <p class="text-center text-muted">Built with HTML and CSS</p>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
                        <img src="styles/images/deutsche-lyric.png" alt="" class="img-fluid mb-3 rounded">
-                             <h3 class="text-center m-0">Deutsche-lyric app  </h3>  
+                             <h3 class="text-center m-0">Deutsche-lyric App  </h3>  
                              <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                      </div>
                      <div class="col-md-6 mb-4">
                          <img src="styles/images/world-clock.png" alt="" class="img-fluid mb-3 rounded">
-                     <h3 class="text-center m-0">World-Clock app</h3>  
+                     <h3 class="text-center m-0">World-Clock App</h3>  
                      <p class="text-center text-muted">Built with HTML and CSS</p>
                      </div>
              </div>
