--- a/contact.html
+++ b/contact.html
@@ -12,19 +12,20 @@
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between ">
-             <img src="styles/images/logo.png" alt="logo" class="logo img-fluid" >
+            <a href="/" title="Homepage">
+             <img src="styles/images/logo.png" alt="Cristina Mihalachi logo" class="logo img-fluid" ></a>
         <ul>
             <li >
-                <a href="/">Home</a>
+                <a href="/" title="Homepage">Home</a>
             </li>
-            <li>
-                <a href="/about.html">About</a>
+            <li >
+                <a href="/about.html" title="About Cristina Mihalachi">About</a>
             </li>
                 <li>
-                    <a href="/work.html">Work</a>
+                    <a href="/work.html" title="Cristina`s work">Work</a>
                 </li>
                 <li class="active">
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact.html" title="Contact Cristina Mihalachi">Contact</a>
                 </li> 
              </ul> 
         </nav>
