--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potfolio </title>
+    <title>Frontend-developer Cristina Mihalachi </title>
+    <meta name="description" content="Cristina Mihalachi is a front-end engineer based in Germany.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c098aa47cd.js" crossorigin="anonymous"></script>
@@ -12,19 +13,20 @@
 <body>
  <div class="container">
     <nav class="d-flex justify-content-between ">
-         <img src="styles/images/logo.png" alt="logo" class="logo img-fluid" >
+        <a href="/" title="Homepage">
+         <img src="styles/images/logo.png" alt="Cristina Mihalachi logo" class="logo img-fluid" ></a>
     <ul>
         <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
         </li>
         <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Cristina Mihalachi">About</a>
         </li>
             <li>
-                <a href="/work.html">Work</a>
+                <a href="/work.html" title="Cristina`s work">Work</a>
             </li>
             <li>
-                <a href="/contact.html">Contact</a>
+                <a href="/contact.html" title="Contact Cristina Mihalachi">Contact</a>
             </li> 
          </ul> 
     </nav>
@@ -54,7 +56,7 @@
            <div class="project-description">
             <h2 class="mb-5">Volleyball</h2>
               <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-               <a href="" class="btn btn-branding-outline">Learn more</a>
+               <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
             </div>
         </div>
     </div>
@@ -64,7 +66,7 @@
             <div class="project-description">
                <h2 class="mb-5">Weather App</h2>
                <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-               <a href="" class="btn btn-branding-outline">Learn more</a>
+               <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
            </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -81,22 +83,22 @@
        <div class="project-description">
         <h2 class="mb-5">World-Clock App</h2>
           <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-           <a href="" class="btn btn-branding-outline">Learn more</a>
+           <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
         </div>
     </div>
   </div>
   <footer>
     <div class="contact-box justify-content-between mb-5 d-none d-md-flex" >
      <div>
-        <h4>
+        <h3>
         Work Inquiry
-        </h4>
+        </h3>
         <p class="text-muted">
             Let`s work together
         </p> 
     </div>
     <div>
-        <a href=""class="btn btn-branding mt-3">Contact me</a>
+        <a href="/contact.html"class="btn btn-branding mt-3">Contact me</a>
     </div>
   </div>
     <div class="d-flex justify-content-center">
