Made the web-site CEO friendly and fixed the navigation links

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  <div class="container">  
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="styles/images/Volleyball.png" class="img-fluid" />
+            <img src="styles/images/Volleyball.png" class="img-fluid" alt="volleyball project preview"/>
         </div>
         <div class="col"> 
            <div class="project-description">
@@ -70,13 +70,13 @@
            </div>
         </div>
         <div class="col d-none d-lg-block">
-            <img src="styles/images/weather-app.png" class="img-fluid" />
+            <img src="styles/images/weather-app.png" class="img-fluid" alt="weather-app project preview" />
         </div>
    </div>
 
     <div class="row">
       <div class="col d-none d-lg-block">
-        <img src="styles/images/world-clock.png" class="img-fluid" />
+        <img src="styles/images/world-clock.png" class="img-fluid" alt="world-clock project preview" />
       </div>
 
       <div class="col"> 
@@ -87,8 +87,9 @@
         </div>
     </div>
   </div>
-  <footer>
-    <div class="contact-box justify-content-between mb-5 d-none d-md-flex" >
+  <footer class="container">
+    <div 
+    class="contact-box justify-content-between mb-5 d-none d-md-flex" >
      <div>
         <h3>
         Work Inquiry
@@ -98,19 +99,48 @@
         </p> 
     </div>
     <div>
-        <a href="/contact.html"class="btn btn-branding mt-3">Contact me</a>
+        <a 
+        href="/contact.html"
+        class="btn btn-branding mt-3" 
+        title="Contact Cristina Mihalachi">
+        Contact me
+         </a>
     </div>
-  </div>
-    <div class="d-flex justify-content-center">
-    
-    <a href="mailto:dev.mihalachi@gmail.com" class="email-link mb-5">dev.mihalachi@gmail.com</a>
+    </div>
+    <div class="d-flex justify-content-center mb-5">
+    <a
+     href="mailto:dev.mihalachi@gmail.com"
+     class="email-link mb-5"
+     title="Email Cristina Mihalachi">dev.mihalachi@gmail.com
+
+     </a>
    </div>
     <div class="social-links d-flex justify-content-center mb-5">
-    <a href="https:/www.instagram.com/dev.mihalachi"target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    <a href="https:/www.github.com/cristina793" target="_blank"><i class="fa-brands fa-github"></i></a>
-    <a href="https:/www.facebook.com/dev.mihalachi"  target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-
-</div>
+    <a
+     href="https:/www.instagram.com/dev.mihalachi"
+     target="_blank"
+     title="Instagram Profile">
+     <i class="fa-brands fa-instagram"></i>
+    </a>
+    <a 
+    href="https://github.com/cristina793" 
+    target="_blank"
+    title="Github Profile">
+    <i class="fa-brands fa-github"></i>
+    </a>
+    <a 
+    href="https:/www.facebook.com/dev.mihalachi"
+    target="_blank"
+    title="Facebook Profile">
+    <i class="fa-brands fa-facebook-f"></i>
+    </a>
+ </div>
+ <p class="text-center mt-5">
+    This project was coded by Cristina Mihalachi and it is 
+    <a 
+    href="https://github.com/cristina793/portfolio-project" 
+    target="_blank">open-sourced </a>✌️.
+ </p>
 </footer>
  </div> 
 </body>
