--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
          </div>
       <div class="content-container">
               <h1 class="mb-2 text-center p-0" >Cristina Mihalachi</h1> 
-              <h2 class="mb-5 text-center" > Frontend developer, based in Germany</h2>
+              <h3 class="mb-5 text-center" > Frontend developer, based in Germany</h3>
     
      <div class="container">
         <div class="row">
@@ -50,6 +50,61 @@
         </div> 
      </div>
     </div>
+    <footer class="container">
+      <div 
+      class="contact-box justify-content-between mb-5 d-none d-md-flex" >
+       <div>
+          <h3>
+          Work Inquiry
+          </h3>
+          <p class="text-muted">
+              Let`s work together
+          </p> 
+      </div>
+      <div>
+          <a 
+          href="/contact.html"
+          class="btn btn-branding mt-3" 
+          title="Contact Cristina Mihalachi">
+          Contact me
+           </a>
+      </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+      <a
+       href="mailto:dev.mihalachi@gmail.com"
+       class="email-link mb-5"
+       title="Email Cristina Mihalachi">dev.mihalachi@gmail.com
+  
+       </a>
+     </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+      <a
+       href="https:/www.instagram.com/dev.mihalachi"
+       target="_blank"
+       title="Instagram Profile">
+       <i class="fa-brands fa-instagram"></i>
+      </a>
+      <a 
+      href="https://github.com/cristina793" 
+      target="_blank"
+      title="Github Profile">
+      <i class="fa-brands fa-github"></i>
+      </a>
+      <a 
+      href="https:/www.facebook.com/dev.mihalachi"
+      target="_blank"
+      title="Facebook Profile">
+      <i class="fa-brands fa-facebook-f"></i>
+      </a>
+   </div>
+   <p class="text-center mt-5">
+      This project was coded by Cristina Mihalachi and it is 
+      <a 
+      href="https://github.com/cristina793/portfolio-project" 
+      target="_blank">open-sourced </a>✌️.
+   </p>
+  </footer>
 </div>
 </body>
 </html>
