--- a/work.html
+++ b/work.html
@@ -35,28 +35,83 @@
           <h1 class=" mb-5">Take a look at what I've been working on!</h1>
              <div class="row">
                <div class="col-md-6 mb-4">
-                  <img src="styles/images/weather-app.png" alt="" class="img-fluid mb-3 rounded">
+                  <img src="styles/images/weather-app.png" alt="Weather App preview" class="img-fluid mb-3 rounded">
                         <h3 class="text-center m-0">Weather App</h3>  
                         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <img src="styles/images/Volleyball.png" alt="" class="img-fluid mb-3 rounded">
+                    <img src="styles/images/Volleyball.png" alt="Volleyball App preview" class="img-fluid mb-3 rounded">
                 <h3 class="text-center m-0">Volleyball App</h3>  
                 <p class="text-center text-muted">Built with HTML and CSS</p>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
-                       <img src="styles/images/deutsche-lyric.png" alt="" class="img-fluid mb-3 rounded">
+                       <img src="styles/images/deutsche-lyric.png" alt="German Lyric Project preview" class="img-fluid mb-3 rounded">
                              <h3 class="text-center m-0">Deutsche-lyric App  </h3>  
                              <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                      </div>
                      <div class="col-md-6 mb-4">
-                         <img src="styles/images/world-clock.png" alt="" class="img-fluid mb-3 rounded">
+                         <img src="styles/images/world-clock.png" alt="World-Clock App preview" class="img-fluid mb-3 rounded">
                      <h3 class="text-center m-0">World-Clock App</h3>  
                      <p class="text-center text-muted">Built with HTML and CSS</p>
                      </div>
              </div>
         </div>
+        <footer class="container">
+            <div 
+            class="contact-box justify-content-between mb-5 d-none d-md-flex" >
+             <div>
+                <h3>
+                Work Inquiry
+                </h3>
+                <p class="text-muted">
+                    Let`s work together
+                </p> 
+            </div>
+            <div>
+                <a 
+                href="/contact.html"
+                class="btn btn-branding mt-3" 
+                title="Contact Cristina Mihalachi">
+                Contact me
+                 </a>
+            </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+            <a
+             href="mailto:dev.mihalachi@gmail.com"
+             class="email-link mb-5"
+             title="Email Cristina Mihalachi">dev.mihalachi@gmail.com
+        
+             </a>
+           </div>
+            <div class="social-links d-flex justify-content-center mb-5">
+            <a
+             href="https:/www.instagram.com/dev.mihalachi"
+             target="_blank"
+             title="Instagram Profile">
+             <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a 
+            href="https://github.com/cristina793" 
+            target="_blank"
+            title="Github Profile">
+            <i class="fa-brands fa-github"></i>
+            </a>
+            <a 
+            href="https:/www.facebook.com/dev.mihalachi"
+            target="_blank"
+            title="Facebook Profile">
+            <i class="fa-brands fa-facebook-f"></i>
+            </a>
+         </div>
+         <p class="text-center mt-5">
+            This project was coded by Cristina Mihalachi and it is 
+            <a 
+            href="https://github.com/cristina793/portfolio-project" 
+            target="_blank">open-sourced </a>✌️.
+         </p>
+        </footer>
      </div>
 </body>
 </html>
