Changed the intro-paragraph

--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
         <div class="navigation-links mb-5 text-center ">
         <a class=" btn btn-branding p-3" href="/contact.html" title="Contact Cristina Mihalachi">
      Contact me</a>
-        <a class="btn btn-branding-outline p-3" href="/about.html" title="About Cristina Mihalachi">
-     About me</a>
   </div>
 </div>
-<p class="text-center m-5 ">Featured Project which my best projects be choice to show</p>
+<p class="text-center m-5 ">Check out some of my featured projects below</p>
 
  <div class="container">  
     <div class="row mb-5">
@@ -136,10 +134,10 @@
     </a>
  </div>
  <p class="text-center mt-5">
-    This project was coded by Cristina Mihalachi and it is 
+   ✌️ This project was coded by Cristina Mihalachi and it is 
     <a 
     href="https://github.com/cristina793/portfolio-project" 
-    target="_blank">open-sourced </a>✌️.
+    target="_blank">open-sourced </a>
  </p>
 </footer>
  </div> 
