Corrected the style to branding-button

--- a/work.html
+++ b/work.html
@@ -40,12 +40,14 @@
                         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
+                    <a href="https://playing-volleyball.netlify.app" target="_blank" class="text-decoration-none">
                     <img src="styles/images/Volleyball.png" alt="Volleyball App preview" class="img-fluid mb-3 rounded">
                 <h3 class="text-center m-0">Volleyball App</h3>  
-                <p class="text-center text-muted">Built with HTML and CSS</p>
+                <p class="text-center text-muted">Built with HTML and CSS</p> </a>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
+                       
                        <img src="styles/images/deutsche-lyric.png" alt="German Lyric Project preview" class="img-fluid mb-3 rounded">
                              <h3 class="text-center m-0">Deutsche-lyric App  </h3>  
                              <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
