--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
- <div class="container">
+ <div class="container container-fluid">
     <nav class="d-flex justify-content-between ">
         <a href="/" title="Homepage">
          <img src="styles/images/logo.png" alt="Cristina Mihalachi logo" class="logo img-fluid" ></a>
@@ -54,7 +54,9 @@
            <div class="project-description">
             <h2 class="mb-5">Volleyball</h2>
               <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-               <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
+               <a href="https://playing-volleyball.netlify.app"
+                class="btn btn-branding-outline"
+                target="_blank">Learn more</a>
             </div>
         </div>
     </div>
