--- a/work.html
+++ b/work.html
@@ -47,9 +47,10 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
-                       
+                       <a href="https://german-poems.netlify.app/" target="_blank">
                        <img src="styles/images/deutsche-lyric.png" alt="German Lyric Project preview" class="img-fluid mb-3 rounded">
-                             <h3 class="text-center m-0">Deutsche-lyric App  </h3>  
+                             <h3 class="text-center m-0">German Poems App  </h3>  
+                            </a>
                              <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                      </div>
                      <div class="col-md-6 mb-4">
