Added the link to german- poems app

--- a/work.html
+++ b/work.html
@@ -40,18 +40,30 @@
                         <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="https://playing-volleyball.netlify.app" target="_blank" class="text-decoration-none">
-                    <img src="styles/images/Volleyball.png" alt="Volleyball App preview" class="img-fluid mb-3 rounded">
+                    <a 
+                    href="https://playing-volleyball.netlify.app"
+                    target="_blank" 
+                    class="text-decoration-none">
+                    <img 
+                    src="styles/images/Volleyball.png" 
+                    alt="Volleyball App preview" 
+                    class="img-fluid mb-3 rounded">
                 <h3 class="text-center m-0">Volleyball App</h3>  
                 <p class="text-center text-muted">Built with HTML and CSS</p> </a>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mb-4">
-                       <a href="https://german-poems.netlify.app/" target="_blank">
-                       <img src="styles/images/deutsche-lyric.png" alt="German Lyric Project preview" class="img-fluid mb-3 rounded">
-                             <h3 class="text-center m-0">German Poems App  </h3>  
-                            </a>
-                             <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+                       <a
+                        href="https://german-poems.netlify.app/"
+                         target="_blank" 
+                         class="text-decoration-none">
+                       <img 
+                        src="styles/images/deutsche-lyric.png" 
+                        alt="German Lyric Project preview" 
+                        class="img-fluid mb-3 rounded">
+                       <h3 class="text-center m-0 ">German Poems App  </h3>  
+                     
+                        <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>   </a>
                      </div>
                      <div class="col-md-6 mb-4">
                          <img src="styles/images/world-clock.png" alt="World-Clock App preview" class="img-fluid mb-3 rounded">
