added new projects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <div class="container container-fluid">
     <nav class="d-flex justify-content-between ">
         <a href="/" title="Homepage">
-         <img src="styles/images/logo.png" alt="Cristina Mihalachi logo" class="logo img-fluid" ></a>
+        </a>
     <ul>
         <li class="active">
             <a href="/" title="Homepage">Home</a>
@@ -37,64 +37,29 @@
 
          <p> 👋 Hello, I am </p> 
          <h1 >Cristina Mihalachi</h1> 
-         <h2 class="mb-5"> Frontend developer, based in Germany</h2>
-        <div class="navigation-links mb-5 text-center ">
-        <a class=" btn btn-branding p-3" href="/contact.html" title="Contact Cristina Mihalachi">
-     Contact me</a>
-  </div>
+         <h2 class="mb-5"> Junior Front-end developer</h2>
+      
 </div>
 <p class="text-center m-5 ">Check out some of my featured projects below</p>
 
- <div class="container">  
-    <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-            <img src="styles/images/Volleyball.png" class="img-fluid" alt="volleyball project preview"/>
-        </div>
-        <div class="col"> 
-           <div class="project-description">
-            <h2 class="mb-5">Volleyball</h2>
-              <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-               <a href="https://playing-volleyball.netlify.app"
-                class="btn btn-branding-outline"
-                target="_blank">Learn more</a>
-            </div>
-        </div>
-    </div>
-    
-    <div class="row mb-5">
-        <div class="col"> 
-            <div class="project-description">
-               <h2 class="mb-5">Weather App</h2>
-               <p class="mb-5 text-muted">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-               <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
-           </div>
-        </div>
-        <div class="col d-none d-lg-block">
-            <img src="styles/images/weather-app.png" class="img-fluid" alt="weather-app project preview" />
-        </div>
-   </div>
+<div class="text-center">
+    <a 
+    href="/work.html"
+    class="btn btn-branding" 
+    title="Contact Cristina Mihalachi">
+   Projects
+     </a>
+</div>
 
-    <div class="row">
-      <div class="col d-none d-lg-block">
-        <img src="styles/images/world-clock.png" class="img-fluid" alt="world-clock project preview" />
-      </div>
-
-      <div class="col"> 
-       <div class="project-description">
-        <h2 class="mb-5">World-Clock App</h2>
-          <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by</p>
-           <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
-        </div>
-    </div>
-  </div>
+ 
   <footer class="container">
     <div 
-    class="contact-box justify-content-between mb-5 d-none d-md-flex" >
+    class="contact-box justify-content-between mb-5 d-md-flex" >
      <div>
         <h3>
         Work Inquiry
         </h3>
-        <p class="text-muted">
+        <p class="text-muted text-center">
             Let`s work together
         </p> 
     </div>
@@ -116,30 +81,32 @@
      </a>
    </div>
     <div class="social-links d-flex justify-content-center mb-5">
-    <a
-     href="https:/www.instagram.com/dev.mihalachi"
-     target="_blank"
-     title="Instagram Profile">
-     <i class="fa-brands fa-instagram"></i>
-    </a>
+        <a
+        href="https://www.linkedin.com/in/cristina-mihalachi-710461292/?locale=en_US"
+        target="_blank"
+        title="linkedin-in Profile">
+        <i class="fa-brands fa-linkedin-in"></i>
+       </a>
     <a 
     href="https://github.com/cristina793" 
     target="_blank"
     title="Github Profile">
     <i class="fa-brands fa-github"></i>
     </a>
-    <a 
-    href="https:/www.facebook.com/dev.mihalachi"
-    target="_blank"
-    title="Facebook Profile">
-    <i class="fa-brands fa-facebook-f"></i>
-    </a>
+
  </div>
  <p class="text-center mt-5">
-   ✌️ This project was coded by Cristina Mihalachi and it is 
+    This project was coded by 
+    <a 
+    href="https://www.shecodes.io/graduates/103776-cristina-mihalachi"
+    target="_blank"
+    title="SheCodes Profile">
+    Cristina Mihalachi
+    </a>
+     and it is 
     <a 
     href="https://github.com/cristina793/portfolio-project" 
-    target="_blank">open-sourced </a>
+    target="_blank">open-sourced</a>✌️.
  </p>
 </footer>
  </div> 
