improved de responsivness of home page and  work page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     <a 
     href="/work.html"
     class="btn btn-branding" 
-    title="Contact Cristina Mihalachi">
+    title="Contact Cristina Mihalachi"
+    >
    Projects
      </a>
 </div>
@@ -54,7 +55,7 @@
  
   <footer class="container">
     <div 
-    class="contact-box justify-content-between mb-5 d-md-flex" >
+    class="contact-box justify-content-between mb-5 d-none d-md-flex" >
      <div>
         <h3>
         Work Inquiry
