--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
  
   <footer class="container">
     <div 
-    class="contact-box justify-content-between mb-5 d-none d-md-flex" >
-     <div>
+    class="contact-box justify-content-between mb-5 " >
+     <div class="d-none d-md-flex">
         <h3>
         Work Inquiry
         </h3>
