--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
  
   <footer class="container">
     <div 
-    class="contact-box justify-content-between mb-5 " >
-     <div class="d-none d-md-flex">
+    class="contact-box justify-content-between mb-5 d-md-flex " >
+     <div >
         <h3>
         Work Inquiry
         </h3>
-        <p class="text-muted text-center">
+        <p class="text-muted text-center d-none d-md-flex">
             Let`s work together
         </p> 
     </div>
