--- a/index.html
+++ b/index.html
@@ -55,23 +55,24 @@
  
   <footer class="container">
     <div 
-    class="contact-box justify-content-between mb-5 d-md-flex " >
-     <div >
-        <h3>
-        Work Inquiry
-        </h3>
-        <p class="text-muted text-center d-none d-md-flex">
+    class="contact-box  mb-5 d-block " >
+     <div  >
+     
+        <p class="text-muted text-center">
             Let`s work together
         </p> 
     </div>
-    <div>
-        <a 
-        href="/contact.html"
-        class="btn btn-branding mt-3" 
-        title="Contact Cristina Mihalachi">
-        Contact me
-         </a>
-    </div>
+    
+<div class="text-center">
+    <a 
+    href="/contact.html"
+    class="btn btn-branding" 
+    title="Contact Cristina Mihalachi"
+    >
+   Contact me
+     </a>
+</div>
+ 
     </div>
     <div class="d-flex justify-content-center mb-5">
     <a
