added the link to resume

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>
                 <a href="/work.html" title="Cristina`s work">Work</a>
             </li>
+            
             <li>
                 <a href="/contact.html" title="Contact Cristina Mihalachi">Contact</a>
             </li> 
@@ -32,9 +33,7 @@
     </nav>
          </div>
      
-         <div class="hero">
-
-
+         <div class="hero text-center">
          <p> 👋 Hello, I am </p> 
          <h1 >Cristina Mihalachi</h1> 
          <h2 class="mb-5"> Junior Front-end developer</h2>
