--- a/about.html
+++ b/about.html
@@ -40,8 +40,15 @@
             <div class="col-lg-6">
              <div class="content">  
             <p class=" description mb-5">
-                Hello! I'm a passionate junior front-end developer with a flair for crafting engaging and responsive web experiences. Proficient in tools like VSCode and GitHub, I specialize in leveraging technologies such as React.js and Bootstrap to create dynamic and visually appealing interfaces.</p>
+                Hello! I'm a passionate junior front-end developer with a flair for crafting engaging and responsive web experiences. Proficient in tools like <strong>VSCode</strong> and <strong>GitHub</strong>, I am working with <strong>React.js</strong>  and <strong>Bootstrap</strong> to create dynamic and visually appealing interfaces.</p>
               <a href="/work.html" class=" btn btn-branding">See my projects</a>
+              <a
+              href="https://www.dropbox.com/home/%D0%9F%D0%B0%D0%BF%D0%BA%D0%B0%20%D1%80%D0%B0%D0%B1%D0%BE%D1%87%D0%B5%D0%B9%20%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D1%8B%20work/work?preview=Cristina+Mihalachi+(1)+(1).pdf" 
+              width="500" 
+              height="375"
+              target="_blank"
+               rel="noopener noreffer"
+               class="text-decoration-none d-block text-center mt-5 ">Take a look at my CV</a>
            
              </div>
             </div>
